--- a/picoscope/picoscope.nuspec
+++ b/picoscope/picoscope.nuspec
@@ -27,9 +27,9 @@ This is a nuspec. It mostly adheres to https://docs.nuget.org/create/Nuspec-Refe
     <!-- Is the version a prerelease of a version? https://docs.nuget.org/create/versioning#creating-prerelease-packages -->
     <!-- Note that unstable versions like 0.0.1 can be considered a released version, but it's possible that one can release a 0.0.1-beta before you release a 0.0.1 version. If the version number is final, that is considered a released version and not a prerelease. -->
     <version>6.13.15</version>
-    <packageSourceUrl>https://github.com/gamgee/chocolatey-packages</packageSourceUrl>-->
+    <packageSourceUrl>https://github.com/gamgee/chocolatey-packages</packageSourceUrl>
     <!-- owners is a poor name for maintainers of the package. It sticks around by this name for compatibility reasons. It basically means you. -->
-    <owners>Johannes Müller</owners>-->
+    <owners>Johannes Müller</owners>
     <!-- ============================== -->
 
     <!-- == SOFTWARE SPECIFIC SECTION == -->
