--- a/picoscope/picoscope.nuspec
+++ b/picoscope/picoscope.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>picoscope</id>
-    <version>6.13.15</version>
+    <version>6.14.10</version>
     <packageSourceUrl>https://github.com/gamgee/chocolatey-packages</packageSourceUrl>
     <owners>Johannes Müller</owners>
     <title>picoscope (Install)</title>
@@ -12,8 +12,7 @@
     <tags>picoscope oscilloscope picotech</tags>
     <summary>PicoScope 6 oscilloscope software</summary>
     <description>PicoScope 6 is the latest version of our oscilloscope software. This release is compatible with all non-automotive USB PC Oscilloscopes (PicoScope Automotive is available for users of Automotive Oscilloscopes).</description>
-    <releaseNotes>- Fixed an issue with analog channel triggering using a PicoScope 5000A/B or D series oscilloscopes
-    - Fixed an issue where editing a custom probe caused the program to crash</releaseNotes>
+    <releaseNotes>- We've added a new serial bus protocol decoder for BroadR-Reach; the automotive Ethernet networking bus</releaseNotes>
     <iconUrl>https://cdn.jsdelivr.net/gh/gamgee/chocolatey-packages/icons/picoscope6.png</iconUrl>
     <copyright>Copyright © 1995-2019, Pico Technology Ltd.</copyright>
   </metadata>
