--- a/picoscope/picoscope.nuspec
+++ b/picoscope/picoscope.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>picoscope</id>
-    <version>6.14.10</version>
+    <version>6.14.23</version>
     <packageSourceUrl>https://github.com/gamgee/chocolatey-packages</packageSourceUrl>
     <owners>Johannes Müller</owners>
     <title>picoscope (Install)</title>
@@ -12,9 +12,9 @@
     <tags>picoscope oscilloscope picotech</tags>
     <summary>PicoScope 6 oscilloscope software</summary>
     <description>PicoScope 6 is the latest version of our oscilloscope software. This release is compatible with all non-automotive USB PC Oscilloscopes (PicoScope Automotive is available for users of Automotive Oscilloscopes).</description>
-    <releaseNotes>- We've added a new serial bus protocol decoder for BroadR-Reach; the automotive Ethernet networking bus</releaseNotes>
+    <releaseNotes>- Support for PicoScope 6424E, 6404E and 6403E 4-channel oscilloscopes</releaseNotes>
     <iconUrl>https://cdn.jsdelivr.net/gh/gamgee/chocolatey-packages/icons/picoscope6.png</iconUrl>
-    <copyright>Copyright © 1995-2019, Pico Technology Ltd.</copyright>
+    <copyright>Copyright © 1995-2020, Pico Technology Ltd.</copyright>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
